swagger user added
